# plugins

./: README.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  question.md
Watermark/: .gitignore  CMakeLists.txt  README.md  Watermark.qrc  corepluginInterface.cpp  corepluginInterface.h  plugin.yaml.example  watermarkplugin.cpp  watermarkplugin.h
